RD-2007-09-28-0: Enhancem.: added some advance reservation tests
                 Review:    AA

RD-2007-09-27-1: Bugfix:    - fixed qmaster/advance_reservation test
                 Review:    AH

RD-2007-09-27-0: Enhancem:  - speed up of install core system
                            - speed up of auto installation
                 Review:    AA

AP-2007-09-25-0: Bugfix:    fix mod_hostgroup parameters in qconf check.60.exp
                 Review:    RD

MP-2007-09-24-0: Enhancem.: Added qdel test to check for proper parsing 
                            of wc_job_range_list
                 Review:    JG

RH-2007-09-24-0: Bugfix:    Invalid configuration version number fixed
                 Review:    MD

RD-2007-09-24-0: Bugfix:    fixed check_qsub_ts_iz_145 test
                 Review:    OJ

AP-2007-09-22-0: Enhancem.: o SGE objects interfaces enhancement - Part I.
                            o (messages, handling errors, vi edit,...)
                            o objects: project, calendar, hostgroup
                 Review:    MP

AH-2007-09-21-0: Enhancem.: Added test for reservation scheduling issue #2344
                 Review:    RD

RD-2007-09-21-0: Bugfix:    - fixed tight integration test
                            - fixed clients/advance_reservation test
                 Review:    JG

RN-2007-09-20-0: Enhancem.: Added new test for authuser binary (in utilbin)
                 Issue:     2194 
                 Review:    JG

RH-2007-09-20-0: Enhancem.: Connections over ssh with password implemented
                 Review:    JG

JG-2007-09-19-0: Enhancem.: Enhanced signal handler introduced with
                            CR-2007-08-28-0.
                 Review:    RH

MP-2007-09-14-0: Enhancem.: Added tests for qstat -g d -r and qstat -r
                            and checking of xml output
                 Issue:     123
                 Review:    JG

MP-2007-09-10-0: Enhancem.: Added tests for qhost with xml output