@@ -1,3 +1,5 @@
+RD-2007-09-28-1: Bugfix:    fixed qconf calendar test
+
 RD-2007-09-28-0: Enhancem.: added some advance reservation tests
                  Review:    AA
 
